tests/ui/wf/wf-impl-associated-type-trait.stderr
error[E0277]: the trait bound `T: MyHash` is not satisfied
  --> $DIR/wf-impl-associated-type-trait.rs:17:16
   |
LL |     type Bar = MySet<T>;
   |                ^^^^^^^^ the trait `MyHash` is not implemented for `T`
   |
note: required by a bound in `MySet`
  --> $DIR/wf-impl-associated-type-trait.rs:8:20
   |
LL | pub struct MySet<T:MyHash> {
   |                    ^^^^^^ required by this bound in `MySet`
help: consider restricting type parameter `T` with trait `MyHash`
   |
LL | impl<T: MyHash> Foo for T {
   |       ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
